{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 37,
  "lineage": "fbf47025-0b0a-9b86-bfa6-3cfef00432c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0321e1b64ed90382d",
            "arn": "arn:aws:ec2:us-east-1:767397972310:elastic-ip/eipalloc-0321e1b64ed90382d",
            "domain": "vpc",
            "id": "eipalloc-0321e1b64ed90382d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-102-1.compute-1.amazonaws.com",
            "public_ip": "35.174.102.1",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "eipalloc-0321e1b64ed90382d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:internet-gateway/igw-0ac91e1064dd7cd40",
            "id": "igw-0ac91e1064dd7cd40",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-igw"
            },
            "tags_all": {
              "Name": "wordpress-ha-igw"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "igw-0ac91e1064dd7cd40",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:loadbalancer/app/wordpress-ha-alb/ed7cfcfdee5abfd3",
            "arn_suffix": "app/wordpress-ha-alb/ed7cfcfdee5abfd3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-ha-alb-931749903.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397972310:loadbalancer/app/wordpress-ha-alb/ed7cfcfdee5abfd3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-ha-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-062a3ab01dd38128f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a41088a7ec32b775"
              },
              {
                "subnet_id": "subnet-0e841d2781d5902a4"
              }
            ],
            "subnets": [
              "subnet-0a41088a7ec32b775",
              "subnet-0e841d2781d5902a4"
            ],
            "tags": {
              "Name": "wordpress-ha-alb"
            },
            "tags_all": {
              "Name": "wordpress-ha-alb"
            },
            "vpc_id": "vpc-068398a2732efdd79",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:loadbalancer/app/wordpress-ha-alb/ed7cfcfdee5abfd3"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:listener/app/wordpress-ha-alb/ed7cfcfdee5abfd3/5496457433fc3bb3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:targetgroup/wordpress-ha-tg/533d358ea92e08ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397972310:listener/app/wordpress-ha-alb/ed7cfcfdee5abfd3/5496457433fc3bb3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:loadbalancer/app/wordpress-ha-alb/ed7cfcfdee5abfd3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:listener/app/wordpress-ha-alb/ed7cfcfdee5abfd3/5496457433fc3bb3"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.wordpress",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:targetgroup/wordpress-ha-tg/533d358ea92e08ed",
            "arn_suffix": "targetgroup/wordpress-ha-tg/533d358ea92e08ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/wp-login.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397972310:targetgroup/wordpress-ha-tg/533d358ea92e08ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-ha-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wordpress-ha-tg"
            },
            "tags_all": {
              "Name": "wordpress-ha-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397972310:targetgroup/wordpress-ha-tg/533d358ea92e08ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0321e1b64ed90382d",
            "association_id": "eipassoc-0c577576f694864fd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-002b4e4034c6f3cb4",
            "network_interface_id": "eni-07def837bb86d8f8c",
            "private_ip": "10.0.1.78",
            "public_ip": "35.174.102.1",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e841d2781d5902a4",
            "tags": {
              "Name": "wordpress-ha-nat"
            },
            "tags_all": {
              "Name": "wordpress-ha-nat"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "nat-002b4e4034c6f3cb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:route-table/rtb-0492ed8edc88f5498",
            "id": "rtb-0492ed8edc88f5498",
            "owner_id": "767397972310",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002b4e4034c6f3cb4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-ha-private-rt"
            },
            "tags_all": {
              "Name": "wordpress-ha-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtb-0492ed8edc88f5498",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:route-table/rtb-058ac1866bc0292c1",
            "id": "rtb-058ac1866bc0292c1",
            "owner_id": "767397972310",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac91e1064dd7cd40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-ha-public-rt"
            },
            "tags_all": {
              "Name": "wordpress-ha-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtb-058ac1866bc0292c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d6c6d432148522d",
            "region": "us-east-1",
            "route_table_id": "rtb-0492ed8edc88f5498",
            "subnet_id": "subnet-0d0d4493bb5809dd5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtbassoc-06d6c6d432148522d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4532e02c0f27f8e",
            "region": "us-east-1",
            "route_table_id": "rtb-0492ed8edc88f5498",
            "subnet_id": "subnet-0bcd8c1cb7a7bcab7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtbassoc-0e4532e02c0f27f8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0041dcfcfc4eac197",
            "region": "us-east-1",
            "route_table_id": "rtb-058ac1866bc0292c1",
            "subnet_id": "subnet-0e841d2781d5902a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtbassoc-0041dcfcfc4eac197",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c3284af016326a5",
            "region": "us-east-1",
            "route_table_id": "rtb-058ac1866bc0292c1",
            "subnet_id": "subnet-0a41088a7ec32b775"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "rtbassoc-02c3284af016326a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:security-group/sg-062a3ab01dd38128f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062a3ab01dd38128f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-ha-alb-sg",
            "name_prefix": "",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ha-alb-sg"
            },
            "tags_all": {
              "Name": "wordpress-ha-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "sg-062a3ab01dd38128f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:security-group/sg-0bea5298300e704d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bea5298300e704d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062a3ab01dd38128f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-ha-ec2-sg",
            "name_prefix": "",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ha-ec2-sg"
            },
            "tags_all": {
              "Name": "wordpress-ha-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "sg-0bea5298300e704d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:security-group/sg-085b846da5885783f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b846da5885783f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bea5298300e704d7"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "wordpress-ha-efs-sg",
            "name_prefix": "",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ha-efs-sg"
            },
            "tags_all": {
              "Name": "wordpress-ha-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "sg-085b846da5885783f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:security-group/sg-08c24b14c8f3e1725",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c24b14c8f3e1725",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bea5298300e704d7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-ha-rds-sg",
            "name_prefix": "",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ha-rds-sg"
            },
            "tags_all": {
              "Name": "wordpress-ha-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "sg-08c24b14c8f3e1725",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:subnet/subnet-0d0d4493bb5809dd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d4493bb5809dd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-private-a"
            },
            "tags_all": {
              "Name": "wordpress-ha-private-a"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "subnet-0d0d4493bb5809dd5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:subnet/subnet-0bcd8c1cb7a7bcab7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcd8c1cb7a7bcab7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-private-b"
            },
            "tags_all": {
              "Name": "wordpress-ha-private-b"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "subnet-0bcd8c1cb7a7bcab7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:subnet/subnet-0e841d2781d5902a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e841d2781d5902a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397972310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-public-a"
            },
            "tags_all": {
              "Name": "wordpress-ha-public-a"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "subnet-0e841d2781d5902a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:subnet/subnet-0a41088a7ec32b775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41088a7ec32b775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397972310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-public-b"
            },
            "tags_all": {
              "Name": "wordpress-ha-public-b"
            },
            "vpc_id": "vpc-068398a2732efdd79"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "subnet-0a41088a7ec32b775",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397972310:vpc/vpc-068398a2732efdd79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4890bd4493d4d9d",
            "default_route_table_id": "rtb-0f076ba6940ec1fc5",
            "default_security_group_id": "sg-0583055161aa9fbab",
            "dhcp_options_id": "dopt-04229111b5692c0dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068398a2732efdd79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f076ba6940ec1fc5",
            "owner_id": "767397972310",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-ha-vpc"
            },
            "tags_all": {
              "Name": "wordpress-ha-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397972310",
            "id": "vpc-068398a2732efdd79",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}